--- a/MVVM_API_SampleProject.csproj
+++ b/MVVM_API_SampleProject.csproj
@@ -49,6 +49,22 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Models\To-Do.cs" />
+	  <Compile Remove="Views\Page1.xaml.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Remove="Views\Page1.xaml" />
+	  <MauiXaml Remove="Views\ToDoView.xaml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Views\ToDoView.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
